--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubukey (0.1.3-0ppa0~maverick) maverick; urgency=low
+ubukey (0.1.5-0ppa0~maverick) maverick; urgency=low
 
-  * fix...
+  * remove custom syslinux 4
+  * use fat32 for usb partitions
 
- -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 04 Jan 2011 21:12:03 +0100
+ -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 30 Jan 2011 01:03:03 +0100
