--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-ubukey (0.1.5-0ppa1~maverick) maverick; urgency=low
+ubukey (0.1.6-0ppa0~maverick) maverick; urgency=low
 
-  * remove custom syslinux 4
-  * use fat32 for usb partitions
+  * fix...
 
  -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 30 Jan 2011 01:03:03 +0100
