--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubukey (0.2-0ppa4~natty) natty; urgency=low
+ubukey (0.2.1-0ppa1~natty) natty; urgency=low
 
-  * add natty package
+  * fix debootstrap
+  * add dependencies
 
  -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 30 Jan 2011 01:03:03 +0100
