--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubukey (0.2.2-0ppa1~natty) natty; urgency=low
+ubukey (0.2.2-0ppa3~natty) natty; urgency=high
 
   * add basic custom plugins management system
+  * fix 
 
  -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 30 Jan 2011 01:03:03 +0100
