--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,5 @@
-ubukey (0.2.2-0ppa5~natty) natty; urgency=high
+ubukey (0.2.2.1-0ppa1~natty) natty; urgency=high
 
-  * add basic custom plugins management system
-  * update/fix chroot plugins 
-  * remove some modules
+  * fix!
 
  -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 30 Jan 2011 01:03:03 +0100
