--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ubukey (0.2.3-0ppa5~natty) natty; urgency=high
+ubukey (0.2.3.1-0ppa1~precise) precise; urgency=high
 
-  * fix!
+  * fix virtualbox!
 
- -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 05 Feb 2012 17:18:03 +0100
+ -- Laguillaumie sylvain <s.lagui@free.fr>  Tue, 15 Feb 2012 16:54:03 +0100
