--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubukey (0.2.3.1-0ppa1~maverick) maverick; urgency=high
+ubukey (0.2.3.1-0ppa1~precise) precise; urgency=high
 
   * fix virtualbox!
 
